Change google api token.

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC3T_J0vxsZsYMHIKdFp9YMnX5iIbocDUU`</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC02n3AZNVPP280ZZfhHkJe55NiUWJGnwI</string>
 </resources>
