--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -43,5 +43,13 @@
         android:layout_alignStart="@+id/switch1"
         android:text="Data" />
 
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/data"
+        android:text="Button" />
+
 
 </RelativeLayout>
