--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/data"
-        android:text="Button" />
+        android:text="savezAndclear" />
 
     <TextView
         android:id="@+id/textView2"
